--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -93,6 +93,13 @@ body{
 .panel-default .panel-body{
 	padding: 10px;
 }
+// plugins fb-res
+.fb-wrap {
+  width:100%;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+.fb-like-box, .fb-like-box span, .fb-like-box span iframe[style] { width: 100% !important; }
 
 @media (max-width:560px) {
 	.panel-default .panel-body{
